# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: constants.py  constructors.py  dictionary_constructor.py  engine.py  parsers.py
gendiff/formatters/: construction_dictionary.py  json_render.py  plain_render.py  text_render.py
gendiff/scripts/: gendiff.py
tests/: test_expect.py  test_first.py  test_input_formats.py  test_output_formats.py
tests/fixtures/: after.json  after.yml  before.yml  json.golden  result_json.txt  result_text.txt  text.golden
